--- a/wp-feedstats/feedstats.pot
+++ b/wp-feedstats/feedstats.pot
@@ -1,138 +1,198 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FeedStats\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2007-09-26 15:09+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-03-28 16:50+0100\n"
+"PO-Revision-Date: 2008-03-28 16:52+0100\n"
 "Last-Translator: Frank Bueltge <frank@bueltge.de>\n"
 "Language-Team: Frank Bueltge\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _e;__\n"
-"X-Poedit-SearchPath-0: .\n"
 
-#: wp-feedstats.php:99
+
+#: wp-feedstats.php:102
 msgid "Error in file: "
-msgstr ""
+msgstr "Fehler in Datei: "
 
-#: wp-feedstats.php:344
-msgid "Day"
-msgstr ""
-
-#: wp-feedstats.php:345
-#: wp-feedstats.php:421
-msgid "Visits"
-msgstr ""
-
-#: wp-feedstats.php:353
-msgid "Today"
-msgstr ""
-
-#: wp-feedstats.php:355
-msgid "First Day"
-msgstr ""
-
-#: wp-feedstats.php:383
-#: wp-feedstats.php:424
-#: wp-feedstats.php:484
-#: wp-feedstats.php:557
+#: wp-feedstats.php:368
+#: wp-feedstats.php:455
+#: wp-feedstats.php:518
+#: wp-feedstats.php:592
 msgid "Average"
-msgstr ""
+msgstr "Durchschnitt"
 
-#: wp-feedstats.php:384
-#: wp-feedstats.php:428
-#: wp-feedstats.php:483
-#: wp-feedstats.php:556
+#: wp-feedstats.php:369
+#: wp-feedstats.php:459
+#: wp-feedstats.php:517
+#: wp-feedstats.php:591
 msgid "Maximum"
-msgstr ""
+msgstr "Maximum"
+
+#: wp-feedstats.php:389
+msgid "Day"
+msgstr "Tag"
+
+#: wp-feedstats.php:390
+#: wp-feedstats.php:450
+msgid "Visits"
+msgstr "Besuche"
 
 #: wp-feedstats.php:400
+msgid "Today"
+msgstr "heute"
+
+#: wp-feedstats.php:402
+msgid "First Day"
+msgstr "erster Tag"
+
+#: wp-feedstats.php:423
 msgid "Last %N% Referer"
-msgstr ""
+msgstr "letzten %N% Referer"
 
-#: wp-feedstats.php:420
+#: wp-feedstats.php:449
 msgid "Statistic"
-msgstr ""
+msgstr "Statistik"
 
-#: wp-feedstats.php:432
-#: wp-feedstats.php:482
-#: wp-feedstats.php:555
+#: wp-feedstats.php:463
+#: wp-feedstats.php:516
+#: wp-feedstats.php:590
 msgid "Total"
-msgstr ""
+msgstr "Gesamt"
 
-#: wp-feedstats.php:432
-msgid "Last %N% Days"
-msgstr ""
-
-#: wp-feedstats.php:436
-msgid "Maximum online"
-msgstr ""
-
-#: wp-feedstats.php:444
-msgid "You are about to delete all data and reset stats. OK to delete, Cancel to stop"
-msgstr ""
-
-#: wp-feedstats.php:444
-msgid "Reset Statistic"
-msgstr ""
-
-#: wp-feedstats.php:554
-msgid "FeedStats"
-msgstr ""
-
-#: wp-feedstats.php:555
+#: wp-feedstats.php:463
+#: wp-feedstats.php:516
+#: wp-feedstats.php:590
 msgid " (Last "
-msgstr ""
+msgstr " (Letzten "
 
-#: wp-feedstats.php:555
+#: wp-feedstats.php:463
+#: wp-feedstats.php:516
+#: wp-feedstats.php:590
 msgid " Days)"
-msgstr ""
+msgstr " Tage)"
 
-#: wp-feedstats.php:599
+#: wp-feedstats.php:467
+msgid "Maximum online"
+msgstr "Maximum online"
+
+#: wp-feedstats.php:477
+#: wp-feedstats.php:478
+msgid "Reset Statistic"
+msgstr "Statistik zurücksetzen"
+
+#: wp-feedstats.php:478
+msgid "You are about to delete all data and reset stats. OK to delete, Cancel to stop"
+msgstr "Du willst die Daten löschen und die Statistik zurück setzen. OK für löschen, Cancel für Abbrechen."
+
+#: wp-feedstats.php:486
+msgid "Konfiguration FeedStats"
+msgstr "Einstellungen Feedstats"
+
+#: wp-feedstats.php:589
+msgid "FeedStats"
+msgstr "FeedStats"
+
+#: wp-feedstats.php:658
+msgid "The options have been saved!"
+msgstr "Die Einstellungen wurden gespeichert!"
+
+#: wp-feedstats.php:660
+#: wp-feedstats.php:681
+msgid "You do not have sufficient permissions to edit plugins for this blog."
+msgstr "Du hast nicht gen&uuml;gend Berechtigungen zum Ausf&uuml;hren dieser Funktion."
+
+#: wp-feedstats.php:679
+msgid "The options have been deleted!"
+msgstr "Die EInstellungen wurden gel&ouml;scht!"
+
+#: wp-feedstats.php:687
+#: wp-feedstats.php:688
 msgid "FeedStats settings"
-msgstr ""
+msgstr "FeedStats Einstellungen"
 
-#: wp-feedstats.php:606
-msgid "Description"
-msgstr ""
+#: wp-feedstats.php:694
+msgid "Days"
+msgstr "Tage"
 
-#: wp-feedstats.php:606
-msgid "Version"
-msgstr ""
-
-#: wp-feedstats.php:607
-msgid "Value"
-msgstr ""
-
-#: wp-feedstats.php:610
+#: wp-feedstats.php:695
 msgid "Amount of days that is supposed to be saved in the statistics."
-msgstr ""
+msgstr "Anzahl der Tage die in der Statistik gespeichert werden sollen."
 
-#: wp-feedstats.php:614
+#: wp-feedstats.php:698
+msgid "User Level"
+msgstr "User Level"
+
+#: wp-feedstats.php:699
 msgid "Minimum level of WordPress-user, who is allowed to see the statistics."
-msgstr ""
+msgstr "Level das ein WordPress-Benutzer mindestens haben muss um die Statistiken einsehen zu können."
 
-#: wp-feedstats.php:618
+#: wp-feedstats.php:702
+msgid "Sesssion Timeout"
+msgstr "Session Timeout"
+
+#: wp-feedstats.php:703
 msgid "Time of a stay/visit (1hour values 3600seconds is common but might be changed)"
-msgstr ""
+msgstr "Zeit, die ein Besuch dauert (1 Stunde sind 3600 Sekunden; Standardwert der geändert werden kann)."
 
-#: wp-feedstats.php:622
+#: wp-feedstats.php:706
+msgid "Visit Online"
+msgstr "Besucher Online"
+
+#: wp-feedstats.php:707
 msgid "Visitors onlinetime (5minutes value 300s is a recommendation)"
-msgstr ""
+msgstr "Onlinezeit eines Besuchers (5 Minuten sind 300 Sekunden; empfohlener Wert)"
 
-#: wp-feedstats.php:626
+#: wp-feedstats.php:710
+msgid "Not tracked"
+msgstr "Nicht zählen"
+
+#: wp-feedstats.php:711
 msgid "IP, that is supposed not to be saved, ex.: your own IP"
-msgstr ""
+msgstr "IP, die nicht gespeichert werden soll; Bsp.: die eigene IP"
 
-#: wp-feedstats.php:630
+#: wp-feedstats.php:714
+msgid "Dashboardinfo"
+msgstr "Dashboardinfo"
+
+#: wp-feedstats.php:715
 msgid "Statistics can be shown on the dashboard ?"
-msgstr ""
+msgstr "Statistiken können im Tellerrand angezeigt werden?"
 
-#: wp-feedstats.php:635
+#: wp-feedstats.php:720
 msgid "Update Options"
-msgstr ""
+msgstr "Einstellungen aktualisieren"
 
-#: wp-feedstats.php:641
-msgid "Plugin created by <a href=\"http://www.anieto2k.com\">Andr&eacute;s Nieto</a>, in cooperation/base with plugin <a href=\"http://www.deltablog.com/\">PopStats</a>. German and english adjustments, little extensions and new coding by <a href=\"http://bueltge.de\">Frank Bueltge</a>. Thx to <a href=\"http://blog.tomk32.de\">Thomas R. Koll</a> for many improvements for a better code and performance. Possible updates available at : <a href=\"http://www.anieto2k.com/mis-plugins/\">aNieto2k</a> or <a href=\"http://bueltge.de/wp-feedstats-de-plugin/171/\">bueltge.de</a>."
-msgstr ""http://www.anieto2k.com\">Andr&eacute;s Nieto</a>, in Zusammenarbeit/Basis mit dem Plugin <a href=\"http://www.deltablog.com/\">PopStats</a>. Deutsche und englische Sprache, eine Reihe Erweiterungen und neuer Syntax durch <a href=\"http://bueltge.de\">Frank Bueltge</a>. Danke an <a href=\"http://blog.tomk32.de\">Thomas R. Koll</a> für eine Reihe von Ideen und Tipps für einen sauberen Code und bessere Performance. Mögliche Updates gibt es bei: <a href=\"http://www.anieto2k.com/mis-plugins/\">aNieto2k</a> oder <a href=\"http://bueltge.de/wp-feedstats-de-plugin/171/\">bueltge.de</a>."
+#: wp-feedstats.php:724
+#: wp-feedstats.php:730
+msgid "Delete Options"
+msgstr "Datenbankdaten l&ouml;schen"
+
+#: wp-feedstats.php:725
+msgid "The follow button delete all tables and options for the FeedStats plugin. Please use it, <strong>before</strong> deactivate the plugin.<br /><strong>Attention: </strong>You <strong>cannot</strong> undo any changes made by this plugin."
+msgstr "Der folgende Button l&ouml;scht alle Tabellen und Einstellungen f&uuml;r das FeedStats Plugin. Bitte nutze die M&ouml;glichkeit <strong>vor</strong> dem deaktivieren des Plugins.<br /><strong>Achtung: </strong>Du kannst die Aktion <strong>nicht</strong> r&uuml;ckg&auml;ngig machen!"
+
+#: wp-feedstats.php:734
+msgid "Information on the plugin"
+msgstr "Information zum Plugin"
+
+#: wp-feedstats.php:735
+msgid "Plugin created by <a href=\"http://www.anieto2k.com\">Andr&eacute;s Nieto</a>, in cooperation/base with plugin <a href=\"http://www.deltablog.com/\">PopStats</a>. German and english adjustments, little extensions and new coding by <a href=\"http://bueltge.de\">Frank Bueltge</a>. Thx to <a href=\"http://blog.tomk32.de\">Thomas R. Koll</a> for many improvements for a better code and performance."
+msgstr "Plugin erstellt durch <a href=\"http://www.anieto2k.com\">Andr&eacute;s Nieto</a>, in Zusammenarbeit/Basis mit dem Plugin <a href=\"http://www.deltablog.com/\">PopStats</a>. Deutsche und englische Sprache, eine Reihe Erweiterungen und neuer Syntax durch <a href=\"http://bueltge.de\">Frank Bueltge</a>. Danke an <a href=\"http://blog.tomk32.de\">Thomas R. Koll</a> für eine Reihe von Ideen und Tipps für einen sauberen Code und bessere Performance."
+
+#: wp-feedstats.php:736
+msgid "Further information: Visit the <a href=\"http://bueltge.de/wp-feedstats-de-plugin/171/\">plugin homepage</a> for further information or to grab the latest version of this plugin."
+msgstr "Weitere Informationen: Beusche die <a href=\"http://bueltge.de/wp-feed-plugin/204\">Plugin Webseite</a> f&uuml;r weitere Informationen oder lade die aktuelle Version."
+
+#: wp-feedstats.php:736
+msgid "You want to thank me? Visit my <a href='http://bueltge.de/wunschliste'>wishlist</a>."
+msgstr "Du willst Danke sagen, dann besuche meine <a href='http://bueltge.de/wunschliste'>Wunschliste</a>."
+
+#~ msgid "Description"
+#~ msgstr "Beschreibung"
+#~ msgid "Version"
+#~ msgstr "Version"
+#~ msgid "Value"
+#~ msgstr "Wert"
 
